chore: move nestjsazure-eventhub-app from packages -> examples

--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,14 @@
 {
+  "lerna": "3.22.1",
   "packages": [
-    "packages/*"
+    "packages/*",
+    "examples/*"
   ],
   "npmClient": "yarn",
-  "version": "independent"
+  "version": "independent",
+  "command": {
+    "publish": {
+      "conventionalCommits": true
+    }
+  }
 }
