--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "cross-env": "^7.0.2",
+    "eslint": "^7.12.1",
     "husky": "^4.3.0",
     "lerna": "^3.22.1",
+    "prettier": "^2.1.2",
     "typescript": "^4.0.3"
   },
   "scripts": {
@@ -30,6 +32,7 @@
     ]
   },
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "examples/*"
   ]
 }
