--- a/packages/app-appconfig-demo/package.json
+++ b/packages/app-appconfig-demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@digikare/appconfig-demo-app",
+  "name": "@digikare/app-appconfig-demo",
   "version": "0.0.0",
   "private": true,
   "description": "Testing app for appConfig module",
@@ -31,6 +31,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@digikare/nestjs-azure-appconfig": "^0.0.0",
     "@nestjs/common": "^7.1.1",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.1.1",
