chore: update tests and app-config

--- a/packages/app-appconfig-demo/dist.env
+++ b/packages/app-appconfig-demo/dist.env
@@ -3,14 +3,5 @@
 # Please rename it to .env and set the values needed
 ################################################################################
 
-
-# The event hub connection string
-EVENT_HUB_SENDER_CONNECTION_STRING="<event_hub_sender_connection_string>"
-# Specify the partition ID if needed
-EVENT_HUB_SENDER_PARTITION_ID=""
-
-EVENT_HUB_LISTENER_CONNECTION_STRING="<event_hub_receiver_connection_string>"
-# Specify the partition ID to listen if needed
-EVENT_HUB_LISTENER_PARTITION_ID=""
-# Set the consumer group if needed
-EVENT_HUB_LISTENER_CONSUMER_GROUP="<event_consumer_group>"
+APP_CONFIG_CONNECTION="<app_config_connection_string>"
+APP_CONFIG_WRITE_CONNECTION="<app_config_write_connection_string>"
