--- a/packages/nestjs-azure-eventhub/package.json
+++ b/packages/nestjs-azure-eventhub/package.json
@@ -81,5 +81,8 @@
   },
   "bugs": {
     "url": "https://github.com/digikare/monorepo-libs/issues"
+  },
+  "publishConfig": {
+    "tag": "next"
   }
 }
