--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,8 @@
 {
   "lerna": "3.22.1",
-  "packages": [
-    "packages/*",
-    "examples/*"
-  ],
+  "packages": ["packages/*"],
   "npmClient": "yarn",
+  "useWorkspaces": true,
   "version": "independent",
   "command": {
     "publish": {
