--- a/package.json
+++ b/package.json
@@ -31,8 +31,5 @@
       "@commitlint/config-conventional"
     ]
   },
-  "workspaces": [
-    "packages/*",
-    "examples/*"
-  ]
+  "workspaces": ["packages/*"]
 }
