--- a/packages/nestjs-azure-appconfig/package.json
+++ b/packages/nestjs-azure-appconfig/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.build.json",
+    "dev": "tsc -p tsconfig.build.json --watch",
     "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "precommit": "lint-staged",
@@ -13,6 +14,7 @@
     "publish:npm": "npm publish --access public",
     "prepublish:next": "npm run build",
     "publish:next": "npm publish --access public --tag next",
+    "test": "jest --config ./tests/jest.json --runInBand",
     "test:e2e": "jest --config ./tests/jest-e2e.json --runInBand",
     "test:e2e:dev": "jest --config ./tests/jest-e2e.json --runInBand --watch",
     "test:debug": "node --inspect-brk ./node_modules/.bin/ts-node tests/src/main.ts",
@@ -24,11 +26,13 @@
     "@nestjs/common": "^7.1.0",
     "@nestjs/core": "^7.1.0",
     "@nestjs/platform-express": "^7.3.2",
+    "@nestjs/testing": "^7.4.4",
     "@types/jest": "^26.0.7",
     "@types/node": "^12.12.53",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
+    "dotenv": "^8.2.0",
     "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
@@ -55,6 +59,11 @@
   "keywords": [
     "nestjs",
     "azure",
-    "configuration"
-  ]
+    "configuration",
+    "App Configuration",
+    "AppConfig"
+  ],
+  "publishConfig": {
+    "tag": "next"
+  }
 }
