--- a/packages/nestjs-azure-appconfig/package.json
+++ b/packages/nestjs-azure-appconfig/package.json
@@ -2,7 +2,11 @@
   "name": "@digikare/nestjs-azure-appconfig",
   "version": "0.0.0",
   "description": "An azure app configuration module for nestjs",
+  "homepage": "https://github.com/digikare/monorepo-libs#readme",
   "main": "dist/index.js",
+  "license": "MIT",
+  "author": "Tieu-Philippe KHIM <pkhim@digikare.com>",
+  "contributors": [],
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.build.json",
@@ -14,14 +18,12 @@
     "publish:npm": "npm publish --access public",
     "prepublish:next": "npm run build",
     "publish:next": "npm publish --access public --tag next",
-    "test": "jest --config ./tests/jest.json --runInBand",
+    "test": "jest --config ./jest.json --runInBand",
     "test:e2e": "jest --config ./tests/jest-e2e.json --runInBand",
     "test:e2e:dev": "jest --config ./tests/jest-e2e.json --runInBand --watch",
     "test:debug": "node --inspect-brk ./node_modules/.bin/ts-node tests/src/main.ts",
     "test:live": "ts-node tests/src/main.ts"
   },
-  "author": "Tieu-Philippe KHIM <khim.tieu.philippe@gmail.com>",
-  "license": "MIT",
   "devDependencies": {
     "@nestjs/common": "^7.1.0",
     "@nestjs/core": "^7.1.0",
