--- a/packages/nestjs-azure-appconfig/package.json
+++ b/packages/nestjs-azure-appconfig/package.json
@@ -56,7 +56,8 @@
   "dependencies": {
     "@azure/app-configuration": "^1.1.0",
     "@azure/identity": "^1.1.0",
-    "testing": "^2.0.1"
+    "@types/debug": "^4.1.5",
+    "debug": "^4.2.0"
   },
   "keywords": [
     "nestjs",
