--- a/lerna.json
+++ b/lerna.json
@@ -7,6 +7,9 @@
   "command": {
     "publish": {
       "conventionalCommits": true
+    },
+    "version": {
+      "allowBranch": "main"
     }
   }
 }
