--- a/packages/app-appconfig-demo/package.json
+++ b/packages/app-appconfig-demo/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "@digikare/app-appconfig-demo",
-  "version": "0.0.0",
+  "name": "app-appconfig-demo",
   "private": true,
   "description": "Testing app for appConfig module",
   "author": "Tieu-Philippe KHIM <khim.tieu.philippe@gmail.com>",
