build(lint): refactor eslint to his own package

--- a/lerna.json
+++ b/lerna.json
@@ -9,7 +9,9 @@
       "conventionalCommits": true
     },
     "version": {
-      "allowBranch": "main"
+      "allowBranch": "main",
+      "message": "chore(release): release",
+      "push": false
     }
   }
 }
