--- a/packages/nestjs-azure-appconfig/package.json
+++ b/packages/nestjs-azure-appconfig/package.json
@@ -16,7 +16,7 @@
     "build": "tsc -p tsconfig.build.json",
     "dev": "tsc -p tsconfig.build.json --watch",
     "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint -f codeframe \"{src,apps,libs,test}/**/*.ts\" --fix",
     "precommit": "lint-staged",
     "prepublish:npm": "npm run build",
     "publish:npm": "npm publish --access public",
@@ -33,6 +33,7 @@
     "@nestjs/core": "^7.1.0",
     "@nestjs/platform-express": "^7.3.2",
     "@nestjs/testing": "^7.4.4",
+    "@shared/eslint-config": "^0.0.0",
     "@types/jest": "^26.0.7",
     "@types/node": "^12.12.53",
     "@types/supertest": "^2.0.10",
@@ -43,6 +44,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
     "jest": "^26.1.0",
+    "lint-staged": "^10.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.0",
