--- a/packages/nestjs-azure-eventhub/package.json
+++ b/packages/nestjs-azure-eventhub/package.json
@@ -19,12 +19,13 @@
     "clean": "rimraf dist",
     "dev": "tsc -p tsconfig.json --watch",
     "format": "prettier --write \"lib/**/*.ts\" \"tests/**/*.ts\"",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint -f codeframe \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest --config ./tests/jest.json --runInBand",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "@azure/event-hubs": "^5.2.2",
@@ -44,6 +45,7 @@
     "@nestjs/core": "^7.1.1",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.1.1",
+    "@shared/eslint-config": "^0.0.0",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.3",
@@ -55,6 +57,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
     "jest": "^26.0.1",
+    "lint-staged": "^10.5.0",
     "prettier": "^2.0.5",
     "supertest": "^4.0.2",
     "ts-jest": "^26.1.0",
