--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -9,5 +9,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^4.6.0"
   }
 }
