--- a/packages/nestjs-azure-eventhub/package.json
+++ b/packages/nestjs-azure-eventhub/package.json
@@ -19,7 +19,7 @@
     "clean": "rimraf dist",
     "dev": "tsc -p tsconfig.json --watch",
     "format": "prettier --write \"lib/**/*.ts\" \"tests/**/*.ts\"",
-    "lint": "eslint -f codeframe \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint -f codeframe --fix",
     "test": "jest --config ./tests/jest.json --runInBand",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -52,7 +52,7 @@
     "@types/node": "^14.0.6",
     "@types/supertest": "^2.0.9",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
-    "@typescript-eslint/parser": "^3.0.2",
+    "@typescript-eslint/parser": "^4.6.0",
     "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
