--- a/packages/nestjs-azure-eventhub/package.json
+++ b/packages/nestjs-azure-eventhub/package.json
@@ -10,8 +10,7 @@
     "Mathieu BUSOLIN <mbusolin@digikare.com>"
   ],
   "publishConfig": {
-    "tag": "next",
-    "registry": "http://localhost:4873"
+    "tag": "next"
   },
   "scripts": {
     "prebuild": "rimraf dist",
