chore(build): set access public

--- a/packages/nestjs-azure-appconfig/package.json
+++ b/packages/nestjs-azure-appconfig/package.json
@@ -8,6 +8,7 @@
   "author": "Tieu-Philippe KHIM <pkhim@digikare.com>",
   "contributors": [],
   "publishConfig": {
+    "access": "public",
     "tag": "next"
   },
   "scripts": {
