--- a/packages/app-eventhub-demo/package.json
+++ b/packages/app-eventhub-demo/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "author": "Tieu Philippe KHIM <pkhim@digikare.com>",
   "license": "MIT",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "prebuild": "rimraf dist",
@@ -21,7 +22,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@digikare/nestjs-azure-eventhub": "^0.1.0",
+    "@digikare/nestjs-azure-eventhub": "*",
     "@nestjs/common": "^7.1.1",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.1.1",
