chore(checkpointStore): initialize checkpointstore

--- a/packages/app-eventhub-demo/package.json
+++ b/packages/app-eventhub-demo/package.json
@@ -2,6 +2,7 @@
   "name": "app-eventhub-demo",
   "description": "A project for testing nestjs-azure-eventhub",
   "main": "index.js",
+  "version": "0.0.0",
   "author": "Tieu Philippe KHIM <pkhim@digikare.com>",
   "license": "MIT",
   "version": "0.0.0",
@@ -24,7 +25,7 @@
   "dependencies": {
     "@digikare/nestjs-azure-eventhub": "*",
     "@nestjs/common": "^7.1.1",
-    "@nestjs/config": "^0.5.0",
+    "@nestjs/config": "0.5.0",
     "@nestjs/core": "^7.1.1",
     "@nestjs/microservices": "^7.1.1",
     "@nestjs/platform-express": "^7.1.1",
