--- a/packages/nestjs-azure-eventhub/package.json
+++ b/packages/nestjs-azure-eventhub/package.json
@@ -33,6 +33,8 @@
   },
   "dependencies": {
     "@azure/event-hubs": "^5.2.2",
+    "@azure/eventhubs-checkpointstore-blob": "^1.0.1",
+    "@azure/storage-blob": "^12.2.1",
     "debug": "^4.1.1",
     "minimatch": "^3.0.4",
     "reflect-metadata": "^0.1.13",
@@ -40,6 +42,10 @@
     "rxjs": "^6.5.5",
     "supports-color": "^7.2.0",
     "testing": "^2.0.1"
+  },
+  "peerDependencies": {
+    "@nestjs/microservices": "^7.1.1",
+    "@nestjs/platform-express": "^7.1.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.2.0",
