chore(Env): Normalize env var name

--- a/packages/app-eventhub-demo/dist.env
+++ b/packages/app-eventhub-demo/dist.env
@@ -5,12 +5,17 @@
 
 
 # The event hub connection string
-EVENT_HUB_SENDER_CONNECTION_STRING="<event_hub_sender_connection_string>"
+EVENT_HUB_PRODUCER_CONNECTION_STRING=""
+EVENT_HUB_PRODUCER_NAME=""
 # Specify the partition ID if needed
-EVENT_HUB_SENDER_PARTITION_ID=""
+EVENT_HUB_PRODUCER_PARTITION_ID=""
 
-EVENT_HUB_LISTENER_CONNECTION_STRING="<event_hub_receiver_connection_string>"
+EVENT_HUB_CONSUMER_CONNECTION_STRING=""
 # Specify the partition ID to listen if needed
-EVENT_HUB_LISTENER_PARTITION_ID=""
+EVENT_HUB_CONSUMER_PARTITION_ID=""
+EVENT_HUB_CONSUMER_NAME=""
 # Set the consumer group if needed
-EVENT_HUB_LISTENER_CONSUMER_GROUP="<event_consumer_group>"
+EVENT_HUB_CONSUMER_GROUP=""
+
+EVENT_HUB_CONSUMER_CHECKPOINT_CONTAINER_CONNECTION_STRING=""
+EVENT_HUB_CONSUMER_CHECKPOINT_CONTAINER_NAME = ""
