--- a/packages/app-eventhub-demo/package.json
+++ b/packages/app-eventhub-demo/package.json
@@ -5,7 +5,6 @@
   "version": "0.0.0",
   "author": "Tieu Philippe KHIM <pkhim@digikare.com>",
   "license": "MIT",
-  "version": "0.0.0",
   "private": true,
   "scripts": {
     "prebuild": "rimraf dist",
@@ -25,7 +24,7 @@
   "dependencies": {
     "@digikare/nestjs-azure-eventhub": "file:../nestjs-azure-eventhub",
     "@nestjs/common": "^7.1.1",
-    "@nestjs/config": "0.5.0",
+    "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.1.1",
     "@nestjs/microservices": "^7.1.1",
     "@nestjs/platform-express": "^7.1.1",
