--- a/packages/nestjs-azure-eventhub/package.json
+++ b/packages/nestjs-azure-eventhub/package.json
@@ -17,7 +17,7 @@
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.build.json",
     "clean": "rimraf dist",
-    "dev": "tsc -p tsconfig.json --watch",
+    "dev": "tsc -p tsconfig.build.json --watch",
     "format": "prettier --write \"lib/**/*.ts\" \"tests/**/*.ts\"",
     "lint": "eslint -f codeframe --fix",
     "test": "jest --config ./tests/jest.json --runInBand",
@@ -28,8 +28,9 @@
     "precommit": "lint-staged"
   },
   "peerDependencies": {
-    "@nestjs/microservices": "^7.1.1",
-    "@nestjs/platform-express": "^7.1.1"
+    "@nestjs/microservices": "^7.0.0",
+    "@nestjs/platform-express": "^7.0.0",
+    "rxjs": "^6.0.0"
   },
   "dependencies": {
     "@azure/event-hubs": "^5.2.2",
@@ -39,7 +40,6 @@
     "minimatch": "^3.0.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.5",
     "supports-color": "^7.2.0",
     "testing": "^2.0.1"
   },
@@ -68,7 +68,8 @@
     "ts-loader": "^7.0.5",
     "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.3",
+    "rxjs": "^6.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
