--- a/packages/nestjs-azure-eventhub/package.json
+++ b/packages/nestjs-azure-eventhub/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@digikare/nestjs-azure-eventhub",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "EventHub transport module for nestjs microservice",
   "homepage": "https://github.com/digikare/monorepo-libs#readme",
   "main": "dist/index.js",
@@ -63,13 +63,13 @@
     "jest": "^26.0.1",
     "lint-staged": "^10.5.0",
     "prettier": "^2.0.5",
+    "rxjs": "^6.0.0",
     "supertest": "^4.0.2",
     "ts-jest": "^26.1.0",
     "ts-loader": "^7.0.5",
     "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.9.3",
-    "rxjs": "^6.0.0"
+    "typescript": "^3.9.3"
   },
   "jest": {
     "moduleFileExtensions": [
